--- a/src/style/index.styl
+++ b/src/style/index.styl
@@ -174,13 +174,33 @@ body.aframe-inspector-opened
   input.number
     min-height 14px
     outline none
+    border-radius 0
 
   input[type="checkbox"]
-    appearance auto
+    appearance none
     cursor pointer
     margin 0
     height 18px
     width 18px
+    border 1px solid $white
+    border-radius 0
+    background transparent
+    position relative
+
+    &:checked
+        border 1px solid $primary
+        background $primary
+
+        &::after
+            content ''
+            position absolute
+            left 5px
+            top 1px
+            width 4px
+            height 9px
+            border solid white
+            border-width 0 2px 2px 0
+            transform rotate(45deg)
 
   input[type="checkbox"]:focus
     box-shadow none
@@ -195,7 +215,7 @@ body.aframe-inspector-opened
 
   input.string:focus,
   input.number:focus
-    border 1px solid #1faaf2
+    border 1px solid $primary
 
   input.error
     border 1px solid #a00
@@ -203,9 +223,6 @@ body.aframe-inspector-opened
   #sidebar
     background $bg
     width 331px
-
-  #sidebar *
-    vertical-align middle
 
   input,
   textarea,
@@ -235,6 +252,7 @@ body.aframe-inspector-opened
 
   input[type=color]::-webkit-color-swatch-wrapper
     padding 0  /* To remove the inner padding. */
+    border-radius 0  /* So it appears as rectangle instead of an ovale in Safari */
 
   input[type=color]::-moz-color-swatch
     border 0
